src/App.css
.App {
  text-align: center;
}

.expand-button {
  position: absolute;
  top: 3px;
  left: 2px;
  width: 8px;
  height: 12px;
  border-style: groove;
  border-radius: 10px;
  cursor: nw-resize;
}

.expand-help {
  position: absolute;
  top: 22px;
  left: 48px;
  height: fit-content;
  /*width: 52px;*/
  /*cursor: nw-resize;*/
  cursor: pointer;
  text-decoration: underline;
  opacity: 1;
  font-size: 12px;
  font-style: italic;
}

.no-effects {
  font-family: monospace;
  font-size: 14px;
  padding: 4px;
  font-style: italic;
}

.expand-help:hover {
  opacity: 1;
}

.ingredient-div {
  width: fit-content;
  height: fit-content;
  position: relative;
}

.clear-ingredients {
  border: 2px solid black;
  border-radius: 10px;
  border-style: dashed;
  margin: 0px 2px 0px 2px;
  width: fit-content;
  height: fit-content;
  align-self: center;
  padding: 8px;
  margin-bottom: 4px;
  font-size: 12px;
  font-weight: bold;
  font-family: monospace;
  text-transform: uppercase;
  background-color: antiquewhite;
  cursor: pointer;
}

.ingredient-blur {
  filter: invert(48%) sepia(13%) saturate(3207%) hue-rotate(240deg) brightness(35%) contrast(80%);
  opacity: 0.3;
}

.key-selected {
  border: 1px dashed black;
  font-weight: bold;
  filter: contrast(150%);
  /*font-size: 13px;*/
}

.fake-border {
  border: 1px solid;
}

.ingredient-power-bg {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 2.5px;
  z-index: -10;
}

.power-increase {
  background-color: rgb(21, 230, 21);
}

.power-decrease {
  background-color: rgba(255, 95, 95, 0.8) ;
}

.filling-bkg {
  background-color: rgba(255, 0, 0, 0.13);
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.condiment-bkg {
  background-color: rgba(0, 0, 255, 0.14);
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.active-ingredients-bkg {
  background-color: lightgray;
  padding-top: 4px;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.filling-portrait {
  border: 2px solid #d92525;
  border-radius: 10px;
  margin: 0px 2px 0px 2px;
  width: fit-content;
  height: fit-content;
}

.condiment-portrait {
  border: 2px solid #1818be;
  border-radius: 10px;
  margin: 0px 2px 0px 2px;
  width: fit-content;
  height: fit-content;
}

.search-panel {
  margin-top: 10px;
}

.search-bar {
  width: 250px;
  margin: 0px 10px 0px 10px;
}

.search-results-div {
  margin-top: 10px;
}

.complex-search-panel > * {
  margin-bottom: 4px;
}

.complex-row {
  justify-content: center;
}

.settings-bar {
  margin: 10px;
}

.button-spacing {
  cursor: pointer;
  margin: 10px;
}

.ingredient {
  cursor: pointer;
}

.card {
  border: 1px solid black;
  text-align: left;
  border-radius: 10px;
  margin: 2px;
  width: fit-content;
  height: fit-content;
}

.page-break {
  width: 100vw;
}

.pieces {
  display: flex;
  padding-left: 4px;
  margin: 4px;
  margin-top: -10px;
}

.piece-button {
  margin-left: 4px;
  cursor: pointer;
}

.bubble-row {
  display: flex;
  flex-wrap: wrap;
}

.numbering {
  position: absolute;
  top: 2px;
  left: 4px;
  font-size: 10px;
}

.numbering-icon {
  left: 6px;
  top: 1.5px;
}

.bubble-header {
  font-weight: bold;
}

.bubble {
  display: flex;
  user-select: none;
  border-radius: 25px;
  padding: 4px;
  width: fit-content;
  height: fit-content;
  font-family: monospace;
  font-size: 14px;
  margin: 2px;
  cursor: pointer;
}

.bubble-min-width {
  min-width: 70px;
  justify-content: center;
}

.bubble-type {
  border-radius: 5px;
}

.chain-a {
  border-bottom-left-radius: 25px;
  border-top-left-radius: 25px;
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;
  margin-right: 0px;
}
.chain-b {
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0px;
  border-bottom-right-radius: 0px;
  border-top-right-radius: 0px;
  margin-right: 0px;
  margin-left: 0px;
}
.chain-c {
  border-bottom-left-radius: 0px;
  border-top-left-radius: 0px;
  border-bottom-right-radius: 25px;
  border-top-right-radius: 25px;
  margin-left: 0px;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

small {
  font-size: 0.7em;
}

#power-flavors-description {
  position: absolute;
  width: fit-content;
  top: 25px;
  left: 46px;
  font-style: italic;
  font-weight: initial;
  border: 1px dashed;
  border-radius: 25px;
  padding: 4px;
  font-size: 12px;
}

.language-link {
  padding-left: 4px;
  cursor: pointer;
  text-decoration: underline;
}

